VPN issue resolved...
ISSUE: local json results are replaced by VM values

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "local_tests": [
     {"name": "compile.py", "active": false},
-    {"name": "times.py", "active": false},
+    {"name": "times.py", "active": true},
     {"name": "rapl.py", "active": false},
     {"name": "rss.py", "active": false},
     {"name": "doc_times.py", "active": false},
@@ -9,8 +9,8 @@
     {"name": "doc_rss.py", "active": false}
   ],
   "vm_tests": [
-    {"name": "times.py", "active": false},
-    {"name": "rapl.py", "active": true},
+    {"name": "times.py", "active": true},
+    {"name": "rapl.py", "active": false},
     {"name": "rss.py", "active": false},
     {"name": "doc_times.py", "active": false},
     {"name": "doc_rapl.py", "active": false},
@@ -20,7 +20,6 @@
   "vm": {
     "hostname": "192.168.17.64",
     "username": "imran",
-    "password": "3RDGzQ7nQWKi",
     "binary_path": "/root/profiler/compiled",
     "script_path": "/root/profiler/scripts",
     "results_path": "/root/profiler/results"
